[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 401.0
margin_top = 278.0
margin_right = 622.0
margin_bottom = 322.0
columns = 5

[node name="Button" type="Button" parent="CenterContainer/GridContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "1 - 1"

[node name="Button2" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 45.0
margin_right = 86.0
margin_bottom = 20.0
text = "1 - 2"

[node name="Button3" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 90.0
margin_right = 131.0
margin_bottom = 20.0
text = "1 - 3"

[node name="Button4" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 135.0
margin_right = 176.0
margin_bottom = 20.0
text = "1 - 4"

[node name="Button5" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 180.0
margin_right = 221.0
margin_bottom = 20.0
text = "1 - 5"

[node name="Button6" type="Button" parent="CenterContainer/GridContainer"]
margin_top = 24.0
margin_right = 41.0
margin_bottom = 44.0
text = "1 - 6"

[node name="Button7" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 45.0
margin_top = 24.0
margin_right = 86.0
margin_bottom = 44.0
text = "1 - 7"

[node name="Button8" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 90.0
margin_top = 24.0
margin_right = 131.0
margin_bottom = 44.0
text = "1 - 8"

[node name="Button9" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 135.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 44.0
text = "1 - 9"

[node name="Button10" type="Button" parent="CenterContainer/GridContainer"]
margin_left = 180.0
margin_top = 24.0
margin_right = 221.0
margin_bottom = 44.0

[connection signal="pressed" from="CenterContainer/GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Button9" to="." method="_on_Button9_pressed"]
